--- a/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
+++ b/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
@@ -1,22 +1,22 @@
 <view class='box'>
   <view class='headers bg_blue'>
     <view class='num_font'>工作量</view>
-    <view class='num'>200.98m</view>
+    <view class='num'>{{details.page.quantity}}</view>
   </view>
   <view class='list_box bg_fff  '>
     <view class='list'>
       <text>工作种类：</text>
-      <text></text>
+      <text>{{details.page.workTypeName}}</text>
     </view>
 
      <view class='list'>
       <text>子项：</text>
-      <text></text>
+      <text>{{details.page.subPro}}</text>
     </view>
 
      <view class='list'>
-      <text>状态</text>
-      <text></text>
+      <text>状态：</text>
+      <text>{{details.page.status}}</text>
     </view>
   </view>
 
