--- a/page/tabBar/homePages/stayworkload/stayworkload.wxml
+++ b/page/tabBar/homePages/stayworkload/stayworkload.wxml
@@ -19,44 +19,48 @@
   </view>
 
   <!-- 有工作量的时候 -->
-  <block wx:if="1==1">
+  <block wx:if="{{vipDetails.t !=''}}">
     <!-- 个人工作量 -->
-    <view bindtap='goDetails' wx:if="{{headerBorder}}" class='content bg_fff'> 
-      <view class='com_width list_box'>
+    <view wx:if="{{headerBorder}}" class='content bg_fff'> 
+      <view bindtap='goDetails' class='com_width list_box'
+        wx:for='{{perDetails.t}}'wx:key="" wx:item="item"
+        data-groupId="{{item.groupId}}">
         <view class='list'>
           <text class='list_title'>姓名：</text>
-          <text class='list_data'>个人工作量</text>
+          <text class='list_data'>{{item.userName}}</text>
         </view>
         <view class='list'>
           <text class='list_title'>项目名称：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>{{item.projectName}}</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>劳务公司：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>{{item.labourCompanyName}}</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>班组：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>{{item.groupName}}</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>年月：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>{{item.startDate}}</text>
         </view>
         <view class='list'>
           <text class='list_title'>工作量：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>{{item.quantity}}</text>
         </view>
       </view>
       <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
     </view>
     <!-- 班组工作量 -->
     <block wx:else>
-      <view  bindtap='classDetails' class='content bg_fff' wx:for='{{vipDetails.t}}'
-        wx:key="" wx:item="item" data-groupid="{{item.groupId}}"> 
+      <view bindtap='classDetails' class='content bg_fff' 
+        wx:for='{{vipDetails.t}}'wx:key="" wx:item="item" 
+        data-groupid="{{item.groupId}}" data-groupName="{{item.groupName}}"
+        data-titledate="{{item.startDate}}"> 
         <view class='com_width list_box'>
           <view class='list'>
             <text class='list_title'>项目名称：</text>
