--- a/page/tabBar/home/home.wxss
+++ b/page/tabBar/home/home.wxss
@@ -118,13 +118,24 @@
   line-height: 60rpx;
   padding-bottom: 10rpx;
 }
-.attentanceContent{
-  height: 150rpx;
-  width: 100%;
+/*进出 */
+.left_view{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-background-color: #fff;
+  justify-content: space-between;
+  width: 50%;
+  height: 157rpx;
+  padding: 70rpx 0;
+}
+.right_view{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  height: 157rpx;
+  padding: 70rpx 0;
 }
 .attentanceItem{
   width:100%;
@@ -133,6 +144,7 @@ background-color: #fff;
   justify-content:center;
   align-items: center;
   padding: 36px 0px;
+  margin-left: 20rpx;
 }
 .attentanceCome{
   display: flex;
@@ -145,7 +157,6 @@ background-color: #fff;
   height:45rpx;
   background-color: #09bb07;
   color: white;
-  margin-left: 50rpx;
 }
 .attentanceOut{
   display: flex;
@@ -162,20 +173,6 @@ background-color: #fff;
 .attentanceTime{
   font-family: PingFangSC-Medium, sans-serif;
   font-size: 26rpx;
-  margin-left: 30px;
   width: 120rpx;
-}
-.left{
-  width: 50%;
-  display: flex;
-  flex-direction: row;
-  justify-content:center;
-  align-items: center;
-}
-.right{
-  width:50%;
-  display: flex;
-  flex-direction: row;
-  justify-content:center;
-  align-items: center;
+  margin-left: 38rpx;
 }
