--- a/page/tabBar/homePages/wageBlockDetails/wageBlockDetails.wxml
+++ b/page/tabBar/homePages/wageBlockDetails/wageBlockDetails.wxml
@@ -38,7 +38,7 @@
   <!-- 工资明细 -->
   <view class='com_width wage_deta'>工资明细</view>
   <!-- 表格 -->
-  <view bindtap='goWageDetails'>
+  <view>
     <view class='com_tab_title tab_title'>
       <view>年月</view>
       <view>应发(元)</view>
@@ -46,33 +46,13 @@
       <view>实发(元)</view>
       <view>状态</view>
     </view>
-    <view class='com_tab_title'>
-      <view>2019-03</view>
-      <view>5000</view>
-      <view>500</view>
-      <view>4500</view>
-      <view>未确认</view>
-    </view>
-     <view class='com_tab_title'>
-      <view>2019-02</view>
-      <view>5000</view>
-      <view>500</view>
-      <view>4500</view>
-      <view>未确认</view>
-    </view>
-     <view class='com_tab_title'>
-      <view>2019-01</view>
-      <view>5000</view>
-      <view>500</view>
-      <view>4500</view>
-      <view>未确认</view>
-    </view>
-     <view class='com_tab_title'>
-      <view>2019-04</view>
-      <view>5000</view>
-      <view>500</view>
-      <view>4500</view>
-      <view>未确认</view>
+    <view bindtap='goWageDetails' class='com_tab_title'
+      wx:for="{{tabData.t}}" wx:item="item" wx:key="">
+      <view>{{item.month}}</view>
+      <view>{{item.payableSalary}}</view>
+      <view>{{item.deductionSalary}}</view>
+      <view>{{item.realSalary}}</view>
+      <view>{{item.status}}</view>
     </view>
   </view>
 </view>
