--- a/page/tabBar/login/login.wxml
+++ b/page/tabBar/login/login.wxml
@@ -10,4 +10,6 @@
   </view> 
 
   <button bindgetuserinfo="getCode" open-type="getUserInfo" class='com_width bg_blue'>微信授权登录</button>
+
+  <!-- <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">获取手机号</button> -->
 </view>
