--- a/page/tabBar/minePages/bindBankCard/bindBankCard.wxml
+++ b/page/tabBar/minePages/bindBankCard/bindBankCard.wxml
@@ -4,7 +4,7 @@
   <view class='border_t_b bg_fff'>
     <view class='card_num'>
       <text class='num'>银行卡号</text>
-      <input class='card_input' placeholder='请输入银行卡号'></input>
+      <input data-types="0" bindinput='getInputVal' class='card_input' placeholder='请输入银行卡号'></input>
       <text class='color_gray fa fa-camera'></text>
     </view>
   </view>
@@ -13,13 +13,13 @@
   <view class='border_t_b bg_fff'>
     <view class='card_num name_card'>
       <text class='com_titles'>姓名</text>
-      <input class='com_input' placeholder='请输入姓名'></input>
+      <input data-types="1" bindinput='getInputVal' class='com_input' placeholder='请输入姓名'></input>
     </view>
      <view class='card_num'>
       <text class='com_titles'>开户行</text>
-      <input class='com_input' placeholder='请输入开户行'></input>
+      <input data-types="2" bindinput='getInputVal' class='com_input' placeholder='请输入开户行'></input>
     </view>
   </view>
   <!-- 下一步 -->
-  <view class='com_footer_btn bg_blue'>下一步</view>
+  <view bindtap='nextTap' class='com_footer_btn bg_blue'>下一步</view>
 </view>
